--- a/paginas/index.html
+++ b/paginas/index.html
@@ -7,10 +7,15 @@
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
-	<h2>Texto azul com css</h2>
-
-	<h1></h1>
-
-	<script type="text/javascript" src="../js/app.js"></script>
+	<div id="app">
+		<h1>Sued - Sua última esperança divina</h1>
+		<div>
+			<input type="" name="" id="inputField">
+			<button id="askButton">Perguntar</button>
+		</div>
+		<h2 id="answer"></h2>
+	</div>
+	
+<script type="text/javascript" src="../js/app.js"></script>
 </body>
 </html>
