--- a/paginas/index.html
+++ b/paginas/index.html
@@ -11,7 +11,7 @@
 		<h1>Sued - Sua última esperança divina</h1>
 		<div>
 			<input type="" name="" id="inputField">
-			<button id="askButton">Perguntar</button>
+			<button id="askButton" onclick="mostraResposta()">Perguntar</button>
 		</div>
 		<h2 id="answer"></h2>
 	</div>
