--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 
 	<title>SUED</title>
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<div id="app">
@@ -16,6 +16,6 @@
 		<h2 id="answer"></h2>
 	</div>
 	
-<script type="text/javascript" src="../js/app.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
